<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.oa4mp</groupId>
    <artifactId>oa4mp-extension-example</artifactId>
    <name>OA4MP Extension Example</name>
    <packaging>war</packaging>
    <version>1.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <additionalparam>-Xdoclint:none</additionalparam>
        <maven.javadoc.skip>true</maven.javadoc.skip>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.oa4mp</groupId>
            <artifactId>oa4mp-server-oauth2</artifactId>
            <version>6.2.1</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>org.oa4mp</groupId>
            <artifactId>proxy</artifactId>
            <version>6.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.oa4mp</groupId>
            <artifactId>server-loader</artifactId>
            <version>6.2.1</version>
        </dependency>

    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <configuration>
                    <excludes>
                        <exclude>**/*Test.java</exclude>
                    </excludes>
                    <includes>
                        <include>**/*Suite.java</include>
                    </includes>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <inherited>true</inherited>
                        <phase>package</phase>
                        <goals>
                            <goal>war</goal>
                        </goals>
                        <configuration>
                            <attachClasses>true</attachClasses>
                        </configuration>
                    </execution>
                </executions>

                <configuration>

                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                        </manifest>
                        <manifestEntries>
                            <application-version>${project.version}</application-version>
                            <application-name>${project.name}</application-name>
                            <build-time>${timestamp}</build-time>
                            <implementation-version>${project.version}</implementation-version>
                            <implementation-build>${buildNumber}</implementation-build>
                        </manifestEntries>
                    </archive>

                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>

                    <!-- JDK9+ Add Module MAGIC happens below...          -->
                    <!-- Add implicit default JDK9+ java.se explicitly    -->
                    <!-- Add explicit java.desktop for import java.awt.*; -->
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>java.se,java.desktop</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
        <finalName>oauth2</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
